--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="次屁，摄影，次屁之神">
+    <meta name="description" content="这是次屁之神的个人摄影作品网站">
 
     <title>主页</title>
 
