--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-02-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/次屁.png" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-02.jpg">View more</a>
+                                                <p class="tm-figure-description">次屁.</p>
+                                                <a href="img/次屁_src.png">View more</a>
                                             </figcaption>
                                         </figure>
                                     </div>
